init sheet and table

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -29,8 +29,8 @@
         <h2 class="ms-font-xl">Please sideload your add-in to see app body.</h2>
     </section>
     <main id="app-body" class="ms-welcome__main" style="display: none;">
-        <h2 class="ms-font-xl"> Discover what Office Add-ins can do for you today! </h2>
-        <ul class="ms-List ms-welcome__features">
+        <!-- <h2 class="ms-font-xl"> Discover what Office Add-ins can do for you today! </h2> -->
+        <!-- <ul class="ms-List ms-welcome__features">
             <li class="ms-ListItem">
                 <i class="ms-Icon ms-Icon--Ribbon ms-font-xl"></i>
                 <span class="ms-font-m">Achieve more with Office integration</span>
@@ -44,10 +44,20 @@
                 <span class="ms-font-m">Create and visualize like a pro</span>
             </li>
         </ul>
-        <p class="ms-font-l">Modify the source files, then click <b>Run</b>.</p>
-        <div role="button" id="run" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
-            <span class="ms-Button-label">Run</span>
+        <p class="ms-font-l">Modify the source files, then click <b>Run</b>.</p> -->
+        <div class="login">
+            <h2>Input your name</h2>
+            <div class="md-input__container">
+                <div class="md-input__wrapper">
+                    <input class="md-input" tabindex="0" type="text" name="playerName" id="playerName" placeholder="your name">
+                </div>
+            </div>
+            <p></p>
+            <button class="site" id="submitName" type="button">Submit</button>
         </div>
+
+        <h3>Host player please start the game by clicking "RUN" when everyone is ready.</h3>
+        <button class="site2" id="run">Run</button>
     </main>
 </body>
 
