--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -21,9 +21,11 @@
 </head>
 
 <body class="ms-font-m ms-welcome ms-Fabric">
-    <header class="ms-welcome__header ms-bgColor-neutralLighter">
-        <img width="90" height="90" src="../../assets/logo-filled.png" alt="Contoso" title="Contoso" />
-        <h1 class="ms-font-su">Welcome</h1>
+    <header class="ms-welcome__header">
+        <h1 class="ms-font-su" id="whoisturn"></h1>
+        <canvas id="canvas" width="90" height="90" ></canvas>
+        <div id="userButtons" width="90" height="90"></div>
+        <h1 class="ms-font-su" id="whoisturnresult"></h1>
     </header>
     <section id="sideload-msg" class="ms-welcome__main">
         <h2 class="ms-font-xl">Please sideload your add-in to see app body.</h2>
