--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -46,6 +46,8 @@
         </ul>
         <p class="ms-font-l">Modify the source files, then click <b>Run</b>.</p> -->
         <div class="login">
+            <!-- <h3>Host player please Click "Ready" in the beginning.</h3>
+            <button class="site2" id="ready">Ready</button> -->
             <h2>Input your name</h2>
             <div class="md-input__container">
                 <div class="md-input__wrapper">
@@ -53,11 +55,10 @@
                 </div>
             </div>
             <p></p>
-            <button class="site" id="submitName" type="button">Submit</button>
+            <button class="site" id="submitName" type="button">Join</button>
         </div>
-
-        <h3>Host player please start the game by clicking "RUN" when everyone is ready.</h3>
-        <button class="site2" id="run">Run</button>
+        <h3>Host player please Click "Start" to start the game.</h3>
+        <button class="site2" id="start">Start</button>
     </main>
 </body>
 
