--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -60,7 +60,7 @@
             <button class="site" id="submitName" type="button">Join</button>
         </div>
         <h3>Host player please Click "Start" to start the game.</h3>
-        <button class="site2" id="calCallAmt2">calCallAmt2</button>
+        <button class="site2" id="showCurUserIdx">showCurUserIdx</button>
         <button class="site2" id="prepareCard2">-</button>
     </main>
 </body>
